--- a/trunk/sassy_willa/wp-content/themes/builder/css/custom/topcart-css.css
+++ b/trunk/sassy_willa/wp-content/themes/builder/css/custom/topcart-css.css
@@ -26,13 +26,20 @@
 	color: #3e3d3d;
 }
 .wip_woo_cart_drop p.buttons a.button{
-	background: #2999e9  url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAoCAIAAAHOOJfMAAAAlklEQVQokZWPUQ6EIAxEnw3XWj2sHI8bIJ39gBhAs65f7czrtClbTJZddhTscFl2ceMtnz0BIRcB4XABITu1CGCLyVxYkcwdc2EuNa/2RSzrngAgFNE6l86Ov6j7lZ6JZYsJCJUE9eEg1LNhpKm6OyANqmdzXNd4Vcsa27/0dqeZ9Dhww0ftj/te3nuYn+4Zv/nrfyb+BVNJlq5ogBBlAAAAAElFTkSuQmCC") scroll left bottom repeat-x;
+/*	background: #2999e9  url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAoCAIAAAHOOJfMAAAAlklEQVQokZWPUQ6EIAxEnw3XWj2sHI8bIJ39gBhAs65f7czrtClbTJZddhTscFl2ceMtnz0BIRcB4XABITu1CGCLyVxYkcwdc2EuNa/2RSzrngAgFNE6l86Ov6j7lZ6JZYsJCJUE9eEg1LNhpKm6OyANqmdzXNd4Vcsa27/0dqeZ9Dhww0ftj/te3nuYn+4Zv/nrfyb+BVNJlq5ogBBlAAAAAElFTkSuQmCC") scroll left bottom repeat-x;
 	color: #fafafa;
 	border: 1px solid #9c9b9b;
 	-box-shadow: inset 0px 1px 0px #4eabed, 0 1px 3px rgba(0, 0, 0, 0.08);
 	-webkit-box-shadow: inset 0px 1px 0px #4eabed, 0 1px 3px rgba(0, 0, 0, 0.08);
 	-moz-box-shadow: inset 0px 1px 0px #4eabed, 0 1px 3px rgba(0, 0, 0, 0.08);
-	text-shadow: none;
+	text-shadow: none;*/
+		background: none repeat scroll 0 0 #DE1E7D;
+border: medium none;
+border-radius: 0 0 0 0;
+color: #FCFCFC;
+text-transform: uppercase;
+font-size:11px;
+font-family:'Open Sans', Arial, Helvetica, sans-serif;
 }
 .wip_woo_cart_drop p.buttons a.button:hover{
 	background: #2999e9  url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAoCAIAAAHOOJfMAAAAjklEQVQokZWPQQ7EIAwDxyY8pt0X0x/yiz2AKqDVdntK7IkTha1UZ8uRcFjOFjeePkcFIicBERYQ2bQigK1UWzhJtrGFLXWv9UloPyoARBK9s3R2/EXtKz0T2koFopHQGA6hkU0jXbXdgTSpka1xXeNNaS/9X0Z70Cx6Hrjhs/bjvpf3HuaXe+Y3f/3Pwr+RGA2Kh6usvwAAAABJRU5ErkJggg==") scroll left bottom repeat-x;
