--- a/trunk/sassy_willa/wp-content/themes/builder/css/style_main.css
+++ b/trunk/sassy_willa/wp-content/themes/builder/css/style_main.css
@@ -245,8 +245,7 @@ form#wip-search-form {
 	padding-bottom: 0;
 	width: 980px;
 	}
-ul.products li h3.product-title-on-lists{
-	}
+
 table.cart td.actions a.checkout-button, #product_gallery_and_summary .woo_product_content .summary button.button.alt{
 	border-radius:0;
 	}
@@ -523,7 +522,7 @@ ol.commentlist li .comment_entries{
 	font-family:Arial, Helvetica, sans-serif;
 	}*/
 /*Nivo Slider*/ 
-.product_list_price  .amount, .nivo-controlNav, .product_lists_thumbnail span.onsale {
+.product-price,.nivo-controlNav, .product_lists_thumbnail span.onsale {
 	display:none;
 }
 .nivo-directionNav a{
@@ -617,6 +616,9 @@ ol.commentlist li .comment_entries{
 	margin:0 8px;
 	width:233px;
 	}
+.home .product_wraper{
+	margin-top:14px;
+	}
 .product_lists_thumbnail{
 	border:1px solid #d1d1d1;
 	background:none repeat scroll 0 0 #FFFFFF;
@@ -628,9 +630,96 @@ ol.commentlist li .comment_entries{
 	width:auto;
 	}
 .category-title-on-lists {
-	font-size:16px;
+	color: #5F5F5F;
+	font-size: 16px;
+	font-weight: 500;
+	line-height: 16px;
+	margin-bottom: 0;
+	text-align: center;
 	color:#5f5f5f;
-	font-weight:500;
-	line-height:16px;
-	text-align:center;
+	}
+ul.products li h3.product-title-on-lists{
+	border: medium none;
+	font-family: 'Open Sans',arial;
+	font-size: 14px;
+	font-weight: 400;
+	margin-bottom: 8px;
+	padding: 0;
+	color:#5f5f5f;
+	}
+.product-price{
+	text-align:center;	margin-bottom:0;
+	}
+.product_list_price span.amount{
+	font-size:18px;
+	font-family:'Open Sans', arial;
+	font-weight:400;
+	color:#5f5f5f;
+	line-height:18px;
+	}
+.product_list_price del .amount{
+	color:#7c7c7c;
+	}
+.product_list_price{
+	background: none repeat scroll 0 50% transparent;
+	height: auto;
+	margin: 0 0 28px;
+	}
+.product_list_price del{
+	text-decoration:none;
+	margin-right:8px;
+	line-height:18px;
+	}
+.product_list_price del span{
+	text-decoration:line-through;
+	}
+span.product_list_button .item-meta-tip{
+	display:none !important;
+	}
+.product_list_price span.product_list_button{
+	background: none repeat scroll 0 0 transparent;
+	float: none;
+	height: 33px;
+	margin: 0 auto;
+	padding: 0;
+	width: 114px;
+	}
+span.product_list_button a.button {
+	background-color: #B7B3B3;
+	background-image: none;
+	border: 0 none;
+	border-radius: 0 0 0 0;
+	color: #FFFFFF;
+	font-size: 13px;
+	padding: 0;
+	width: auto;
+	font-family:'Open Sans', arial;
+}
+span.product_list_button a.button:hover{
+	color:#fff;
+	font-size:13px;
+	background:#de1e7d;
+	}
+.usesidebar-auto-column-3 .product_lists_thumbnail{
+	border:none;
+	}
+/*Product*/
+form.woocommerce_ordering{
+	display:none;
+	}
+#reviews #comments ol.commentlist{
+	width:auto;
+	padding-right:18px;
+	}
+.star-rating, .comment-text .star-rating, p.add_review{
+	margin-right:18px;
+	}
+#reviews #comments h2{
+	margin-left:18px;
+	}
+.related .category-title-on-lists{
+	font-size:14px;
+	}
+.related  ul.products li h3.product-title-on-lists{
+	font-size:12px;
 	}
