Edit layout checkout

--- a/sassy_willa/wp-content/themes/builder/css/style_main.css
+++ b/sassy_willa/wp-content/themes/builder/css/style_main.css
@@ -814,3 +814,6 @@ form.woocommerce_ordering{
 	display:block;
 	text-align: left;
 }
+#order_review .form-row-first .woocommerce-select{
+	width:128px;
+}
